--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,51 +8,57 @@
   align-items: center;
   width: inherit;
   padding: 32px 104px 64px;
-  .footer-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1920px;
-    width: 100%;
-    .copyright {
-      color: #676767;
-      font-family: Abel;
-      font-size: 1em;
-      line-height: normal;
-    }
+}
 
-    .policy-bar {
-      display: flex;
-      gap: 30px;
-      color: #cfcfcf;
-      font-family: Abel;
-      font-size: 1em;
-    }
+.footer-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1920px;
+  width: 100%;
+}
 
-    .info-link-bar ul {
-      display: flex;
-      gap: 12px;
-    }
+.copyright {
+  color: #676767;
+  font-family: Abel;
+  font-size: 1em;
+  line-height: normal;
+}
 
-    .footer-link {
-      text-decoration: none;
-      color: inherit;
-      &:hover {
-        color: inherit;
-      }
-    }
+.policy-bar {
+  display: flex;
+  gap: 30px;
+  color: #cfcfcf;
+  font-family: Abel;
+  font-size: 1em;
+}
+
+.info-link-list {
+  display: flex;
+  gap: 12px;
+}
+
+.footer-link {
+  text-decoration: none;
+  color: inherit;
+  &:hover {
+    color: inherit;
   }
-  @media (max-width: 767px) {
-    padding: 32px;
+}
 
-    .footer-bar {
-      display: grid;
-      grid-template-columns: 181px 116px;
-      column-gap: auto;
-      row-gap: 60px;
-    }
-    .copyright {
-      order: 1;
-    }
+@media (max-width: 767px) {
+  .main-footer {
+    padding: 32px;
+  }
+
+  .footer-bar {
+    display: grid;
+    grid-template-columns: 181px 116px;
+    column-gap: auto;
+    row-gap: 60px;
+  }
+
+  .copyright {
+    order: 1;
   }
 }
