Feat : 회원가입, 로그인 페이지 기능 구현

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -27,7 +27,7 @@ footer {
     align-self: stretch;
 }
 
-.codeit {
+.footer-codeit {
     color: #676767;
     text-align: center;
     font-family: Acme;
