--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -43,11 +43,12 @@ header {
 
 .user-folder {
     display: flex;
-width: 100%;
-padding: 2rem 62.4rem 6rem 62.4rem;
-flex-direction: column;
-align-items: flex-start;
-gap: 8px;
+    width: 100%;
+    margin-bottom: 4rem;
+    padding: 2rem 62.4rem 6rem 62.4rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
     background-color: var(--Linkbrary-bg);
 }
 .user-folder-info {
@@ -68,5 +69,21 @@ gap: 8px;
     width: 60px;
     height: 60px;
     margin-bottom: 1.2rem;
+}
+
+.search-bar {
+    display: flex;
+    gap: 1rem;
+    width: 1060px;
+    margin-bottom: 4rem;
+    padding: 1.5rem 1.6rem;
+    background-color: var(--Grey-Light);
+}
+
+.input-search {
+    width: 100%;
+    border: none;
+    background: none;
+    border-radius: 1rem;
 }
 
