--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -74,7 +74,7 @@ header {
 .search-bar {
     display: flex;
     gap: 1rem;
-    width: 1060px;
+    width: 106rem;
     margin-bottom: 4rem;
     padding: 1.5rem 1.6rem;
     background-color: var(--Grey-Light);
@@ -87,3 +87,51 @@ header {
     border-radius: 1rem;
 }
 
+.user-card {
+    width: 106rem;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 2.5rem;
+    column-gap: 2rem;;
+}
+
+.card {
+    width: 34rem;
+    height: 33.4rem;
+    border-radius: 0px 0px 15px 15px;
+    box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
+}
+.card-image {
+    width: 34rem;
+    height: 20rem;
+    border-radius: 1.5rem 1.5rem 0 0;
+}
+
+.card-txt {
+    padding: 2rem;
+    color: #000;
+}
+
+.card-txt .description{
+    margin: 1rem 0;
+    display: -webkit-box;
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    line-height: 1.2;
+    word-wrap: break-word;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    /* height: 4.9rem; */
+}
+
+.cal-created {
+    font-size: 1.3rem;
+    color: #666;
+}
+
+.created {
+    font-size: 1.4rem;
+    color: #333;
+}
