--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -58,3 +58,25 @@ footer {
     align-items: flex-start;
     gap: 12px;
 }
+
+@media screen and (max-width: 767px) {
+    footer {
+        padding-top: 40px;
+        height: 0;
+    }
+
+    .footer-content {
+        display: grid;
+        grid-template: 1fr / 1fr 1fr;
+        gap: 60px;
+    }
+
+    .footer-codeit {
+        text-align: left;
+        grid-area: 2/ 1;
+    }
+
+    .footer-icon {
+        justify-content: flex-end;
+    }
+}
