--- a/src/css/Folder.css
+++ b/src/css/Folder.css
@@ -8,12 +8,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 1440px;
+  width: 100%;
   padding-top: 20px;
   padding-bottom: 60px;
   display: flex;
   flex-direction: column;
-  height: 244px;
+}
+@media (max-width: 767px) {
+  .user {
+    padding-top: 10px;
+    padding-bottom: 40px;
+  }
 }
 
 .folder-user {
@@ -22,6 +27,14 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 12px;
+}
+@media (max-width: 767px) {
+  .folder-user {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    margin-bottom: 6px;
+  }
 }
 
 .folder-user-name {
@@ -34,8 +47,21 @@
   line-height: 24px; /* 150% */
   margin-bottom: 20px;
 }
+@media (max-width: 767px) {
+  .folder-user-name {
+    color: #000;
+    font-family: Pretendard;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 10px;
+  }
+}
 
 .folder-name {
+  width: 188px;
+  height: 48px;
   color: #000;
   text-align: center;
   font-feature-settings: "clig" off, "liga" off;
@@ -45,5 +71,18 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  margin-top: 20px;
+}
+@media (max-width: 767px) {
+  .folder-name {
+    color: #000;
+    width: 150px;
+    height: 38px;
+    text-align: center;
+    font-family: Pretendard;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -0.2px;
+  }
 }
