--- a/src/css/Navigation.css
+++ b/src/css/Navigation.css
@@ -1,7 +1,7 @@
 .nav {
   display: flex;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 33px;
+  padding-bottom: 32px;
   align-items: center;
   justify-content: center;
   gap: 8px;
@@ -11,7 +11,6 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 93px;
 }
 
 .wrap {
@@ -31,17 +30,19 @@
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
-    width: 100%;
-    max-width: 1520px;
-    margin-left: 200px;
-    margin-right: 200px;
-    gap: 538px;
+    width: 799px;
+    margin-left: 32px;
+    margin-right: 32px;
     padding: 0;
   }
 }
 
 /* 모바일 사이즈 */
 @media (max-width: 767px) {
+  .nav {
+    padding-top: 18px;
+    padding-bottom: 17px;
+  }
   .wrap {
     display: flex;
     justify-content: space-between;
@@ -52,6 +53,10 @@
     margin-right: 32px;
     gap: 0;
     padding: 0;
+  }
+  .logo-image {
+    width: 88.667px;
+    height: 16px;
   }
 }
 
