--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -12,6 +12,11 @@
     cursor: pointer;
 }
 
+.card-button:hover .card-img {
+    transition: all 0.2s linear;
+    transform: scale(1.3);
+}
+
 .card-info-area {
     display: flex;
     padding: 15px 20px;
