--- a/src/components/Navigation/index.module.css
+++ b/src/components/Navigation/index.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   position: sticky;
   top: 0;
-  z-index: var(--z-index-nav);
+  z-index: 1;
   width: 100%;
   background-color: var(--light-blue);
 }
