--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
-  text-align: center;
+footer {
+  background-color: #111322;
+  color: rgba(207, 207, 207, 1);
+
+  width: 100%;
+  height: 160px;
+  padding: 32px 104px 64px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.footer__section {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  white-space: nowrap;
 }
 
-.App-link {
-  color: #61dafb;
+.footer__year {
+  color: rgba(103, 103, 103, 1);
+}
+.footer__link {
+  display: flex;
+  gap: 30px;
+}
+.footer__link a {
+  color: rgba(103, 103, 103, 1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer__social {
+  display: flex;
+  gap: 10px;
 }
