LinkInput 컴포넌트 ui 완료

--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -2,9 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
   font-family: "Pretendard";
 }
 
@@ -26,4 +23,8 @@ button {
 
 img {
   display: block;
+}
+
+address {
+  font-style: normal;
 }
