--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -8,12 +8,20 @@
 
 .search-bar {
   background-color: #f5f5f5;
-  width: 100%;
+  width: 1060px;
   display: flex;
   gap: 10px;
   padding: 16px;
   align-items: center;
   border-radius: 10px;
+
+  @media (max-width: 1124px) {
+    width: 706px;
+  }
+
+  @media (max-width: 767px) {
+    width: 325px;
+  }
 }
 
 .search-button {
