feat: Add folder select feature and focused button

--- a/src/components/FolderToolBar/FolderToolBar.css
+++ b/src/components/FolderToolBar/FolderToolBar.css
@@ -61,10 +61,11 @@
   &:hover {
     background-color: #e7effb;
   }
-  &:focus {
-    background-color: #6d6afe;
-    color: #fff;
-  }
+}
+
+.focused-button {
+  background-color: #6d6afe;
+  color: #fff;
 }
 
 .util-button {
