--- a/src/components/LinkCard/LinkCard.css
+++ b/src/components/LinkCard/LinkCard.css
@@ -9,7 +9,7 @@
 
   .thumbnail-container {
     width: 340px;
-    height: 215px;
+    height: 200px;
     display: flex;
     justify-content: center;
     overflow: hidden;
@@ -25,6 +25,8 @@
   .link-card-info {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
     padding: 15px 20px;
     gap: 10px;
 
@@ -49,7 +51,8 @@
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       font-size: 1em;
-      line-height: 1.25em;
+      line-height: 1.5em;
+      height: 49px;
     }
     &:hover {
       .link-card-title {
@@ -62,8 +65,9 @@
     }
   }
 
-  .link-card-date-created {
+  .link-card-created {
     font-size: 14px;
+    height: 19px;
     color: #333;
   }
 
