--- a/src/components/AddLinkBar/AddLinkBar.css
+++ b/src/components/AddLinkBar/AddLinkBar.css
@@ -30,13 +30,21 @@
 
   @media (max-width: 1124px) {
     margin: 60px 32px 90px;
+    width: 664px;
   }
   @media (max-width: 767px) {
     margin: 24px 32px 40px;
+    padding: 8px 10px;
+    width: 305px;
 
     .input-box {
       gap: 8px;
+
+      .link-input {
+        font-size: 14px;
+      }
     }
+
     .link-icon {
       width: 16px;
       height: 16px;
