--- a/src/components/LinkCard/LinkCard.css
+++ b/src/components/LinkCard/LinkCard.css
@@ -3,7 +3,6 @@
   height: 334px;
   border-radius: 15px;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
-  overflow: hidden;
   display: flex;
   flex-direction: column;
 
@@ -35,6 +34,31 @@
       justify-content: space-between;
       font-size: 13px;
       position: relative;
+
+      .kebab-button:hover {
+        background-color: #e7effb;
+      }
+
+      .dropdown-list {
+        position: absolute;
+        right: -65px;
+        top: 20px;
+        box-shadow: 0px 2px 8px 0px rgba(51, 50, 54, 0.1);
+      }
+
+      .dropdown-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 14px;
+        padding: 7px 12px;
+        background-color: #fff;
+
+        &:hover {
+          background-color: #e7effb;
+          color: #6d6afe;
+        }
+      }
     }
 
     .link-card-description {
