--- a/src/components/LinkCard/LinkCard.css
+++ b/src/components/LinkCard/LinkCard.css
@@ -7,6 +7,7 @@
   flex-direction: column;
 
   .thumbnail-container {
+    position: relative;
     width: 340px;
     height: 200px;
     display: flex;
@@ -19,6 +20,19 @@
       object-fit: cover;
       flex-shrink: 0;
       transition: transform 0.3s ease;
+    }
+
+    .star-button {
+      z-index: 1;
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      width: 34px;
+      height: 34px;
+
+      &:hover {
+        scale: 1.1;
+      }
     }
   }
   .link-card-info {
