--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -11,6 +11,11 @@
 }
 
 .profile-email {
+  display: none;
   font-size: 1.4rem;
   color: var(--gray100);
+
+  @media (min-width: 768px) {
+    display: inline;
+  }
 }
