--- a/src/components/Foldermenu/index.css
+++ b/src/components/Foldermenu/index.css
@@ -15,13 +15,25 @@
   color: var(--white);
 }
 
-.addFolderIcon {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
 .folderName {
   font-size: 2.4rem;
 }
+
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.addFolderIcon {
+  @media (max-width: 767px) {
+    bottom: 10.1rem;
+    left: 50%;
+    position: fixed;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    z-index: 100;
+  }
+}
+
+/*테블릿 1124 이상 모바일 최소여백 32       테블릿 768~1199 모바일 375 ~767    */
