feat: shared, folder 페이지 구분작업 및 공통레이아웃 렌더링

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,10 +1,17 @@
 .navigation {
-  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   z-index: var(--z-index-nav);
   background-color: var(--Linkbrary-bg);
+}
+
+.navigation.fixed {
+  position: fixed;
+}
+
+.navigation.static {
+  position: static;
 }
 
 .navigation-items {
