--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,6 +2,7 @@
   left: 0;
   top: 0;
   width: 100%;
+  height: 9.3rem;
   z-index: var(--z-index-nav);
   background-color: var(--Linkbrary-bg);
 }
