--- a/src/styles/color.css
+++ b/src/styles/color.css
@@ -10,4 +10,8 @@
   --Linkbrary-gray10: #e7effb;
   --Grey-Light: #f5f5f5;
   --Linkbrary-bg: #f0f6ff;
+
+  --text-gray: #676767;
+  --text-content-gray: #666666;
+  --text-content-black: #333333;
 }
