--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,18 +1,8 @@
 .navigation {
-  left: 0;
-  top: 0;
   width: 100%;
-  height: 9.3rem;
-  z-index: var(--z-index-nav);
+  display: flex;
+  justify-content: center;
   background-color: var(--Linkbrary-bg);
-}
-
-.navigation.fixed {
-  position: fixed;
-}
-
-.navigation.static {
-  position: static;
 }
 
 .navigation-items {
@@ -21,6 +11,7 @@
   align-items: center;
   width: 100%;
   padding: 3.2rem 20rem;
+  height: 9.3rem;
   margin: 0 auto;
 
   @media (max-width: 1199px) {
