--- a/src/components/LinkCard/LinkCard.css
+++ b/src/components/LinkCard/LinkCard.css
@@ -2,6 +2,7 @@
   width: 340px;
   height: 334px;
   border-radius: 15px;
+  overflow: hidden;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
