--- a/src/components/FolderToolBar/FolderToolBar.css
+++ b/src/components/FolderToolBar/FolderToolBar.css
@@ -96,6 +96,7 @@
     border-radius: 20px;
     background-color: #6d6afe;
     color: #fff;
+    z-index: 1;
 
     .add-icon {
       display: none;
