--- a/src/components/LinkCard/LinkCard.css
+++ b/src/components/LinkCard/LinkCard.css
@@ -2,7 +2,6 @@
   width: 340px;
   height: 334px;
   border-radius: 15px;
-  overflow: hidden;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
@@ -14,6 +13,8 @@
     display: flex;
     justify-content: center;
     overflow: hidden;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
     flex-shrink: 0;
     .thumbnail {
       width: 100%;
@@ -50,19 +51,23 @@
       font-size: 13px;
       position: relative;
 
+      .kebab-button-container {
+        position: relative;
+      }
+
       .kebab-button:hover {
         background-color: #e7effb;
       }
 
       .dropdown-list {
         position: absolute;
-        right: -65px;
-        top: 20px;
         box-shadow: 0px 2px 8px 0px rgba(51, 50, 54, 0.1);
       }
 
       .dropdown-item {
         display: flex;
+        flex-shrink: 0;
+        width: 100px;
         justify-content: center;
         align-items: center;
         font-size: 14px;
