--- a/src/Header.css
+++ b/src/Header.css
@@ -1,11 +1,31 @@
 .header {
-    margin: 0 200px;
+    background-color: #F0F6FF;
+}
+
+.header-contents {
+    margin: 0 auto; 
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 30px 200px;
     position: sticky;
     top: 0;
+
+    @media (max-width: 1124px) {
+        width: 704px;
+        padding: 32px 0;
+        margin: 0 auto;
+    }
+    @media (max-width: 767px) {
+        width: 325px;
+        margin: 0 auto;
+    }
+}
+
+a img {
+    @media (max-width: 767px) {
+        height: 16px;
+    }
 }
 
 .icon img {
@@ -38,4 +58,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    @media (max-width: 767px) {
+        display: none;
+    }
 }
