--- a/src/Linklist.css
+++ b/src/Linklist.css
@@ -2,6 +2,13 @@
     display: grid;
     grid-template-columns: repeat(3, 340px);
     gap: 20px;
+    
+    @media (max-width: 1124px) {
+        grid-template-columns: repeat(2, 340px);
+    }
+    @media (max-width: 767px) {
+        grid-template-columns: repeat(1, 340px);
+    }
 }
 
 .Link-info {
@@ -10,13 +17,29 @@
     flex-direction: column;
     gap: 10px;
     text-align: left;
-    font-size: 16px;
-    word-wrap:break-word;
+    font-size: 13px;
+    height: 135px;
+}
+
+.creation-time {
+    color: #666666;
+}
+
+.link-description {
     -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap !important;
+    white-space: normal !important;
+    word-break: break-word;
+    font-size: 16px;
 }
 
 .Link-card {
-    height: 340px;
+    height: 334px;
+    width: 340px;
     overflow: hidden;
     box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
     border-radius: 15px;
@@ -36,11 +59,13 @@
 
 .Link-image {
     width: 100%;
-    height: 200px;
+    height: 220px;
     object-fit: cover;
     overflow: hidden;
 }
 
 .Link-container {
-    margin: 0 auto; 
+    margin: 0 auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
