--- a/src/components/FolderToolBar/FolderToolBar.module.css
+++ b/src/components/FolderToolBar/FolderToolBar.module.css
@@ -1,16 +1,16 @@
-.folder-tool-bar-container {
+.folderToolBarContainer {
   display: flex;
   flex-direction: column;
   gap: 24px;
   width: 1060px;
 
-  .folder-tool-buttons {
+  .folderToolButtons {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
 
-    .folder-name-buttons {
+    .folderNameButtons {
       display: flex;
       flex-wrap: wrap;
       width: 80%;
@@ -18,18 +18,18 @@
     }
   }
 
-  .folder-name-display {
+  .folderNameDisplay {
     font-size: 24px;
     letter-spacing: -0.2px;
     font-weight: 600;
   }
 
-  .folder-name-bar {
+  .folderNameBar {
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    .util-buttons {
+    .utilButtons {
       display: flex;
       gap: 12px;
     }
@@ -42,7 +42,7 @@
   @media (max-width: 767px) {
     width: 325px;
 
-    .folder-name-bar {
+    .folderNameBar {
       flex-direction: column;
       align-items: flex-start;
       gap: 12px;
@@ -50,7 +50,7 @@
   }
 }
 
-.folder-name-button {
+.folderNameButton {
   background-color: #fff;
   border: 1px solid #6d6afe;
   padding: 8px 12px;
@@ -62,7 +62,7 @@
   }
 }
 
-.focused-button {
+.focusedButton {
   background-color: #6d6afe;
   color: #fff;
   &:hover {
@@ -70,7 +70,7 @@
   }
 }
 
-.util-button {
+.utilButton {
   display: flex;
   gap: 4px;
   color: #9fa6b2;
@@ -78,13 +78,13 @@
   font-weight: 600;
 }
 
-.folder-add-button {
+.folderAddButton {
   display: flex;
   font-weight: 500;
   gap: 4px;
   color: #6d6afe;
 
-  .add-icon-white {
+  .addIconWhite {
     display: none;
   }
 
@@ -99,11 +99,11 @@
     color: #fff;
     z-index: 1;
 
-    .add-icon {
+    .addIcon {
       display: none;
     }
 
-    .add-icon-white {
+    .addIconWhite {
       display: block;
     }
   }
