--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,36 +9,40 @@
   background-color: inherit;
   z-index: 2;
   padding: 32px 200px;
+}
 
-  .blind {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+.blind {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.header-login {
+  width: 128px;
+}
+
+.logo-img {
+  width: 133px;
+}
+
+@media (max-width: 1124px) {
+  .main-header {
+    padding: 32px;
   }
+}
 
-  .header-login {
-    width: 128px;
+@media (max-width: 767px) {
+  .main-header {
+    padding: 18px 32px;
   }
 
   .logo-img {
-    width: 133px;
+    width: 88px;
   }
 
-  @media (max-width: 1124px) {
-    padding: 32px;
-  }
-
-  @media (max-width: 767px) {
-    padding: 18px 32px;
-
-    .logo-img {
-      width: 88px;
-    }
-
-    .header-login {
-      width: 80px;
-    }
+  .header-login {
+    width: 80px;
   }
 }
