--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -5,6 +5,7 @@
 
 .nav ul {
   display: flex;
+  padding: 0;
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
@@ -15,7 +16,7 @@
 }
 
 .nav__logo {
-  width: 193px;
+  width: 133px;
   height: 24px;
 }
 
@@ -40,6 +41,7 @@
   line-height: normal;
   text-decoration: none;
 }
+
 .nav__profile {
   display: flex;
   align-items: center;
