--- a/src/components/CardListItem.css
+++ b/src/components/CardListItem.css
@@ -14,6 +14,7 @@ a {
 }
 
 .CardListItem {
+  position: relative;
   width: 340px;
   height: 334px;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.08);
@@ -41,6 +42,15 @@ a {
 .CardListItem:hover .CardListItem__previewImg {
   transform: scale(1.3);
   transition: 0.5s;
+}
+
+.CardListItem__bookmarkIcon {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+.CardListItem__bookmarkIcon:hover {
+  opacity: 1;
 }
 
 .CardListItem__content {
@@ -85,7 +95,7 @@ a {
   line-height: normal;
 }
 
-@media (max-width: 1124px) {
+@media (max-width: 1199px) {
   .CardLinkList {
     grid-template-columns: repeat(2, 340px);
   }
