--- a/src/components/FolderList.css
+++ b/src/components/FolderList.css
@@ -1,5 +1,7 @@
 .folderLinkList {
-  display: flex;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 8fr 2fr;
   align-items: center;
   justify-content: space-between;
   margin-top: 40px;
@@ -25,7 +27,12 @@
   line-height: normal;
 }
 
+.folderLinkList__folder:hover {
+  background: var(--Linkbrary-gray10, #e7effb);
+}
+
 .folderLinkList__addFolderButton {
+  justify-self: end;
   display: flex;
   color: #6d6afe;
   text-align: center;
@@ -41,6 +48,17 @@
 .folderLinkList__addFolderIcon {
   align-items: center;
   margin-left: 4px;
+}
+
+.folderName {
+  color: #000;
+  font-family: Pretendard;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.2px;
+  margin: 24px 0;
 }
 
 @media (max-width: 1124px) {
