--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,9 +1,10 @@
 .card-list .img-box {
     height: 200px;
     overflow: hidden;
+    position: relative;
 }
 
-.card-list img {
+.card-list .img-box > img {
     width: 100%;
     height: 100%;
     transition: all 0.3s;
@@ -16,11 +17,12 @@
     overflow: hidden;
 }
 
-.card-list > li:hover img {
+.card-list > li:hover .img-box > img {
     scale: 1.3;
 }
 
 .card-list .text-box {
+    position: relative;
     padding: 15px 20px;
 }
 
@@ -48,4 +50,9 @@
     font-size: 13px;
     line-height: 1.19307692308;
     color: #666;
+}
+
+.text-menu-wrap {
+    display: flex;
+    justify-content: space-between;
 }
