--- a/src/Components/Article/Article.module.css
+++ b/src/Components/Article/Article.module.css
@@ -2,23 +2,59 @@
 @import "../../reset.css";
 
 .folder_info_container {
-  height: 220px;
+    width: 100%;
+    height: 230px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--gray5);
 }
 
-.folder_info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  padding-bottom: 60px;
+.search_div {
+    width: 50%;
+    height: 70px;
+    background-color: #fff;
+    color: var(--gray2);
+    border-radius: 15px;
+    border: 1px solid var(--primary);
+    padding: 15px 16px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
-.folder_name {
-  font-size: 40px;
-  font-weight: 600;
+.search_input {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    width: 100%;
+    height: 60px;
 }
 
-.owner_name {
-  font-size: 16px;
-  margin-bottom: 20px;
+.btn {
+    width: 100px;
+    height: 40px;
+    border-radius: 8px;
+    color: var(--gray5);
+    font-size: 14px;
+    font-weight: 400;
+    padding: 5px 8px;
+    background: linear-gradient(to right, #6d6afe, #6ae3fe);
+}
+
+input:focus {
+    outline: none;
+}
+
+/* tablet */
+@media (min-width: 768px) and (max-width: 1199px) {
+    .search_div {
+        width: 80%;
+    }
+}
+
+/* mobile */
+@media (min-width: 375px) and (max-width: 767px) {
+    .search_div {
+        width: 80%;
+    }
 }
