--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -2,76 +2,72 @@
 @import "../../reset.css";
 
 /* h e a d e r */
-header {
-  padding: 0 200px;
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  height: 94px;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  background-color: var(--gray5);
-}
-
 .navbar {
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    padding: 0 200px;
+    top: 0;
+    left: 0;
+    height: 94px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: var(--gray5);
+    justify-content: space-between;
 }
 
 /* 로고와 버튼 스타일 */
 .logo {
-  cursor: pointer;
-  position: relative;
-  width: 133px;
-  height: 24px;
-  overflow: clip;
+    cursor: pointer;
+    position: relative;
+    width: 133px;
+    height: 24px;
+    overflow: clip;
 }
 
 .login_button {
-  width: 128px;
-  height: 53px;
-  border-radius: 8px;
-  border: none;
-  background: linear-gradient(to right, #6d6afe, #6ae3fe);
-  color: var(--white);
-  font-size: 1em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
+    width: 128px;
+    height: 53px;
+    border-radius: 8px;
+    border: none;
+    background: linear-gradient(to right, #6d6afe, #6ae3fe);
+    color: var(--white);
+    font-size: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 
 .profile {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  color: #373740;
-  font-size: 14px;
-  font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #373740;
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .profile_img {
-  width: 28px;
-  height: 28px;
-  border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
 }
 
 /* tablet */
 @media (min-width: 768px) and (max-width: 1199px) {
-  header {
-    padding-left: 32px;
-    padding-right: 32px;
-  }
+    .navbar {
+        padding-left: 32px;
+        padding-right: 32px;
+    }
 }
 
 /* mobile */
 @media (min-width: 375px) and (max-width: 767px) {
-  header {
-    padding-left: 32px;
-    padding-right: 32px;
-  }
+    .navbar {
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+
+    .email {
+        display: none;
+    }
 }
