chore: 폴더추가 모바일사이즈 추가

--- a/src/components/AddLinkInput.css
+++ b/src/components/AddLinkInput.css
@@ -54,3 +54,15 @@
   font-weight: 600;
   line-height: normal;
 }
+
+@media (max-width: 1124px) {
+  .AddLinkForm__wrap {
+    width: 704px;
+  }
+}
+
+@media (max-width: 767px) {
+  .AddLinkForm__wrap {
+    width: 325px;
+  }
+}
