--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,4 +1,35 @@
+.search-container {
+  display: flex;
+  width: 100%;
+  max-width: 106rem;
+}
+
+.search-wrapper {
+  width: 100%;
+  position: relative;
+}
+
 .search-input {
-  width: 106rem;
+  width: 100%;
   height: 5.4rem;
+  background-color: #f5f5f5;
+  margin: 4rem 0;
+  padding-left: 3.8rem;
+  padding-right: 1.6rem;
+  border-radius: 1rem;
+  border: transparent;
+  font-size: 1.6rem;
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  left: 1.6rem;
+  transform: translateY(-50%);
+}
+
+@media (max-width: 1124px) {
+  .search-container {
+    max-width: 70.4rem;
+  }
 }
