folder별 link데이터 뿌리기까지 완성

--- a/src/components/SharedPage.css
+++ b/src/components/SharedPage.css
@@ -1,4 +1,7 @@
-.contents-box {
+.contents-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     width: 1060px;
     margin: 0 auto;
     @media (max-width: 1124px) {
@@ -9,3 +12,4 @@
         width: 325px;
     }
 }
+
