--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -22,9 +22,15 @@
 
 .card-image {
   height: 200px;
+  overflow: hidden;
 }
-.card-image > img {
+.card-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: all 0.2s linear;
+}
+
+.card-image:hover img {
+  transform: scale(1.3);
 }
